--- a/AM.ApplicationCore/AM.ApplicationCore.csproj
+++ b/AM.ApplicationCore/AM.ApplicationCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Service\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
